tests/suite/snapshots/suite__parse__tests__parse__use01-1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(((use A)) ((f () () ())))
