tests/suite/snapshots/suite__parse__tests__parse__use03-1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(((use A01)
    (use A02)
    (use A03)
    (use A04)
    (use A05)
    (use A06)
    (use A07)
    (use A08)
    (use A09)
    (use A10)
    (use A11)
    (use A12))
((f () () ())))
