tests/suite/snapshots/suite__parse__tests__parse__use_1.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
(((use foo)
    (use bar)
    (use freddie1)
    (use charlie_qian)
    (use frank'lin)
    (use edward_chen'))
((foo () () ())))
