tests/suite/snapshots/suite__parse__tests__parse__vardecl01-2.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/vardecl01-2.xi:2:12]
   │
 2 │   x:bool[][1]
   ·            ┬  
   ·            ╰── Declared array length after undeclared array length
───╯

