tests/suite/snapshots/suite__parse__tests__parse__vardecl01_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/vardecl01_2.xi:2:12]
   │
 2 │   x:bool[][1]
   ·            ┬  
   ·            ╰── Declared array length after undeclared array length
───╯

