tests/suite/snapshots/suite__parse__tests__parse__vardecl02-1.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 22
expression: Snapshot(program)
---
(()
((f
        ()
        ()
        ((x01 ([] int 1))
            (x02 ([] ([] int 2) 1))
            (x03 ([] ([] ([] int 3) 2) 1))
            (x04 ([] ([] int) 1))
            (x05 ([] ([] ([] int)) 1))
            (x06 ([] ([] ([] ([] int))) 1))
            (x07 ([] ([] ([] int) 2) 1))
            (x08 ([] ([] ([] ([] int)) 2) 1))
            (x09 ([] ([] ([] ([] ([] int))) 2) 1))
            (x10 ([] ([] ([] ([] int) 3) 2) 1))
            (x11 ([] ([] ([] ([] ([] int)) 3) 2) 1))
            (x12 ([] ([] ([] ([] ([] ([] int))) 3) 2) 1))
            (x13 ([] int))
            (x14 ([] ([] int)))
            (x15 ([] ([] ([] int))))))))
